add report model
